@@ -227,7 +227,7 @@ proc putcurdirectory {} {
 
     set buf $expect_out(buffer)
 
-    for {} {1} {} {
+    while {1} {
 	# if end of listing, succeeded!
 	if 0==[regexp "(\[^\n]*)\n(.*)" $buf dummy line buf] return
 
@@ -257,7 +257,7 @@ proc getcurdirectory {transfer} {
 
     set buf $expect_out(buffer)
 
-    for {} {1} {} {
+    while {1} {
 	regexp "(\[^\n]*)\n(.*)" $buf dummy line buf
 
 	set token [lindex $line 0]
